--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </nav>
   </header>
 
+
   <section class="hero" id="home">
     <div class="hero-content">
       <h1>ERUMALLA RAMESH</h1>
@@ -37,5 +38,39 @@
       <img src="c:\Users\Hii\Pictures\Saved Pictures\WhatsApp Image 2025-09-19 at 15.46.20_fa280eaf.jpg" />
     </div>
   </section>
+  
+  </section>
+  <!--about-section-->
+  <section id="about">
+    <h2>About Me</h2>
+    <p>
+      I am Erumalla Ramesh, a highly motivated and dedicated Front-end Developer with a strong foundation in HTML, CSS, and JavaScript. I am eager to learn and apply my skills in React.js to build intuitive and responsive user interfaces. My passion for technology has led me to become a professional in this field.
+    </p>
+  </section>
+  <!--skills-section-->
+  <section id="skills">
+    <div class="skills-container">
+      <h2>skills</h2> <br>
+ <div class="skills-list">html </div> <br>
+         <div class=skill-box>css </div><br>
+         <div class=skill-box>javascript </div><br>
+         
+    </div>
+    </section>
+    <!--contact section-->
+    <section id="contact">
+      <h2>Contact Me</h2>
+      <p>feel free to reach out for collabrations or project inquires!</p>
+      <form action="mailto:erumallaramesh712@gmail.com" method="post" enctype="text/plain">
+<input type="text" name="name" placeholder="Name" required><br>
+<input type="email" name="email" placeholder="Email" required><br>
+<button type="submit">send message </button>
+      </form>
+      </section>
+      <footer>
+        <p>&copy; 2022 Erumalla Ramesh. All rights reserved.</p>
+        <div class="social-icons"></div>
+         
+      </footer>
 </body>
 </html>
